--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-    <meta http-equiv="Cache-Control" content="no-cache">
     <title>Ольга Викторовна - консультирую бесплатно</title>
     <link rel="shortcut icon" href="images/empty.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
@@ -76,12 +75,12 @@
                 <div class="chat-content-list">
 
                 </div>
-                <button type="button" id="scroll_id" class="btn scroll-me aba" data-scroll="#down-box">
+                <div id="scroll_id" class="btn scroll-me aba" data-scroll="#down-box">
                     <span class="container-circle">
                         <span class="button-circle down"></span>
                     </span>
                     <input type="text" class="inp" id="res" value="0" readonly="">
-                </button> <!-- /scroll -->
+                </div> <!-- /scroll -->
 
                 <div id="form" class="iframe-form">
                     <div id="order" class="boxit">
@@ -90,7 +89,7 @@
 
                             <div class="row-form">
                                 <form class="js-form" id="order_form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
-                                    <input type="name" name="Имя" id="name" class="input-roulette" required placeholder="Имя*" autocomplete="off" data-validate-field="name">
+                                    <input type="text" name="Имя" id="name" class="input-roulette" required placeholder="Имя*" autocomplete="off" data-validate-field="name">
                                     <input type="tel" name="Телефон" id="phone" class="input-roulette" required placeholder="Телефон*" autocomplete="off" data-validate-field="phone">
 
 
